--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@1,300&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Juego X0</title>
   </head>
   <body id="body">
     <header>
@@ -60,3 +60,4 @@
     <script src="index.js"></script>
   </body>
 </html>
+
