--- a/index.html
+++ b/index.html
@@ -32,19 +32,20 @@
     </header>
     <div class="contenedor">
 
-   
     <div class="principal">
+               <button class="btn_reset" type="button">Reset</button>
+
       <h2>juego de X y 0</h2>
       <div class="caja">
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
+        <button class="btn">1</button>
+        <button class="btn">2</button>
+        <button class="btn">3</button>
+        <button class="btn">4</button>
+        <button class="btn">5</button>
+        <button class="btn">6</button>
+        <button class="btn">7</button>
+        <button class="btn">8</button>
+        <button class="btn">9</button>
       </div>
     </div>
     <div class="ganador">
