--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@1,300&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>X y 0 GAME</title>
   </head>
   <body id="body">
     <header>
@@ -61,3 +61,4 @@
     <script src="index.js"></script>
   </body>
 </html>
+
